Added option for skipping color grouping

--- a/confs/greek_members.yml
+++ b/confs/greek_members.yml
@@ -33,4 +33,5 @@ target:
   config:
     target_path: ../plots
     plot_name: Greek_Elections_2007_2015_2019
+    color_grouping: false
   type: plotly
