--- a/confs/Greek_Elections_2012_Sept2015_2019.yml
+++ b/confs/Greek_Elections_2012_Sept2015_2019.yml
@@ -1,30 +1,30 @@
 source:
   config:
     sources:
-      - link: https://en.wikipedia.org/wiki/List_of_members_of_the_Hellenic_Parliament,_2007%E2%80%9309
-        table_header: <tr><th>Full Name</th><th>Constituency</th><th>Parliamentary Group</th></tr>
-        name_col: Full Name
-        attr_col:
-          origin_name: Parliamentary Group
-          name_on_plot: Kommata 2007
-#        ignore_cols:
-#          - Parliamentary Group
-        enclosing_tag: tbody
       - link: https://en.wikipedia.org/wiki/List_of_members_of_the_Hellenic_Parliament,_May_2012
         table_header: <tr><th></th><th>Full Name</th><th>Constituency</th><th>Parliamentary Group</th></tr>
         name_col: Full Name
         attr_col:
           origin_name: Parliamentary Group
           name_on_plot: Kommata 2012
-        #        ignore_cols:
-        #          - Parliamentary Group
+          #        ignore_cols:
+          #          - Parliamentary Group
         enclosing_tag: tbody
       - link: https://en.wikipedia.org/wiki/List_of_members_of_the_Hellenic_Parliament,_2015_(February%E2%80%93August)
         table_header: <tr><th>Name</th><th>Constituency</th><th colspan="2">Parliamentary Group</th><th>Comments</th></tr>
         name_col: Name
         attr_col:
           origin_name: Parliamentary Group.1
-          name_on_plot: Kommata 2015
+          name_on_plot: Kommata Feb 2015
+        ignore_cols:
+          - Parliamentary Group
+        enclosing_tag: tbody
+      - link: https://en.wikipedia.org/wiki/List_of_members_of_the_Hellenic_Parliament,_2015_(September)%E2%80%932019
+        table_header: <tr><th>Name</th><th>Constituency</th><th colspan="2">Parliamentary Group</th><th>Comments</th></tr>
+        name_col: Name
+        attr_col:
+          origin_name: Parliamentary Group.1
+          name_on_plot: Kommata Sept 2015
         ignore_cols:
           - Parliamentary Group
         enclosing_tag: tbody
@@ -40,9 +40,9 @@ source:
   type: ParliamentMembersCrawler
 target:
   config:
-    plot_name: Greek_Elections_2007_2012_2015_2019
+    plot_name: Greek Elections 2012-Sept 2015-2019
     target_path: ../plots
-    save_image: false
+    save_image: true
     save_html: true
     color_grouping_type: party # party|year|none
     custom_party_colors: # color_grouping_type should be party
@@ -60,4 +60,5 @@ target:
       Greek solution: "#8ABFBC"
       The river: "#3A5FA6"
       Mera25: "#EF414A"
+      Union of centrists: "#F9804B"
   type: plotly
